--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -63,7 +63,17 @@
 
 <body>
 
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'nl', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 {% include 'main/navbar.html' %}
+
+<div id="google_translate_element"></div>
 
 <div class="section-title">
 	<h2 class="title">{% block secttitle %}{% endblock %}</h2>
